content/terraform-plugin-framework/v0.12.x/docs/plugin/framework/acctests.mdx
---
page_title: 'Plugin Development - Framework: Acceptance Tests'
description: >-
  How to write acceptance tests for providers built on the framework. Acceptance
  tests imitate applying configuration files.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-14T14:39:20-05:00
# END AUTO GENERATED METADATA
---

# Acceptance Tests

You can implement testing with the [acceptance test framework](/terraform/plugin/sdkv2/testing/acceptance-tests) shipped with SDKv2.

Writing and running tests is similar to SDKv2 providers, with the following exceptions:

- [`TestCase`](/terraform/plugin/sdkv2/testing/acceptance-tests/testcase): Specify the provider with [`ProtoV6ProviderFactories`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories) or [`ProtoV5ProviderFactories`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV5ProviderFactories), depending on the intended [provider server](/terraform/plugin/framework/provider-servers) setup.
- [`Schema`](/terraform/plugin/framework/schemas): A root level `id` attribute is required for resources and data sources.

## Specify Providers

Use one of the [`resource.TestCase` type](/terraform/plugin/sdkv2/testing/acceptance-tests/testcase) [`ProtoV6ProviderFactories` field](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories) for [protocol version 6](/terraform/plugin/how-terraform-works#protocol-version-6) or [`ProtoV5ProviderFactories` field](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV5ProviderFactories) for [protocol version 5](/terraform/plugin/how-terraform-works#protocol-version-5). It is only necessary to test with the single protocol version matching the intended provider server.

### Protocol Version 6

Use the [`providerserver.NewProtocol6WithError`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/providerserver#NewProtocol6WithError) helper function to implement the provider server in the [`ProtoV6ProviderFactories` field](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories).

```go
resource.Test(t, resource.TestCase{
	ProtoV6ProviderFactories: map[string]func() (tfprotov6.ProviderServer, error) {
		// newProvider is an example function that returns a provider.Provider
		"examplecloud": providerserver.NewProtocol6WithError(newProvider()),
	},
	Steps: []resource.TestStep{/* ... */},
})
```

### Protocol Version 5

Use the [`providerserver.NewProtocol5WithError`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/providerserver#NewProtocol5WithError) helper function to implement the provider server in the [`ProtoV5ProviderFactories` field](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV5ProviderFactories).

```go
resource.Test(t, resource.TestCase{
	ProtoV5ProviderFactories: map[string]func() (tfprotov5.ProviderServer, error) {
		// newProvider is an example function that returns a provider.Provider
		"examplecloud": providerserver.NewProtocol5WithError(newProvider()),
	},
	Steps: []resource.TestStep{/* ... */},
})
```

## Implement id Attribute

In SDKv2, resources and data sources automatically included an implicit, root level `id` attribute. In the framework, the `id` attribute is not implicitly added.

When testing resources and data sources without the `id` attribute, the acceptance testing framework will return errors such as:

```text
testing_new_config.go:111: no "id" found in attributes
testing_new.go:53: no "id" found in attributes
```

To avoid this, add a root level `id` attribute to resource and data source schemas. Ensure the attribute value is appropriately [written to state](/terraform/plugin/framework/writing-state). Conventionally, `id` is a computed attribute that contains the identifier for the resource.

For example, in the `GetSchema` method implementation of a [`datasource.DataSource`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/datasource#DataSource) or [`resource.Resource`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-framework/resource#Resource):

```go
func (r *ThingResource) GetSchema(ctx context.Context) (tfsdk.Schema, diag.Diagnostics) {
	return tfsdk.Schema{
		// ... potentially other schema configuration ...
		Attributes: map[string]tfsdk.Attribute{
			// ... potentially other schema attributes ...
			"id": {
				Type:     types.StringType,
				Computed: true,
			},
		},
	}, nil
}
```
